k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: type-6-ingress
  annotations:
    cert-manager.io/cluster-issuer: "yc-clusterissuer"
spec:
  tls:
    - hosts:
        - shlim-tech.ru
        - netmapa.online
      secretName: domain-name-secret
  ingressClassName: "nginx"
  rules:
    - host: shlim-tech.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: type-6
                port:
                  number: 443
    - host: netmapa.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: type-7
                port:
                  number: 443
    - host: shlim-tech.ru
      http:
        paths:
          - path: /user-info
            pathType: Prefix
            backend:
              service:
                name: type-6-m
                port:
                  number: 443
